@@ -1,3 +1,9 @@
+2011-05-25  Sebastien Binet  <sebastien.binet@cern.ch>
+
+	* tagging PyUtils-00-10-50-10
+	* obo Vakho: support for merging HITS files
+	* M python/PoolFile.py
+
 2011-05-18  Sebastien Binet  <sebastien.binet@cern.ch>
 
 	* tagging PyUtils-00-10-50-09
